# hobbit-synchrony-v2

./: Hobbit Multiplayer.sln  README.md  Temp.txt
ClientServerApp/: CMakeLists.txt
ClientServerApp/common/NetworkUtilities/: Message.cpp  Message.h  WinCrypto.cpp  WinCrypto.h
ClientServerApp/src/client/: client.cpp
ClientServerApp/src/server/: server.cpp
Hobbit Multiplayer/: ConnectedPlayer.cpp  ConnectedPlayer.h  Hobbit Multiplayer.vcxproj  Hobbit Multiplayer.vcxproj.filters  HobbitClient.cpp  HobbitClient.h  HobbitMultiplayer.cpp  HobbitMultiplayer.h  MainPlayer.h  MessageProcessing.h  Source.cpp  Utility.h
HobbitGameManager/: HobbitGameManager.h  HobbitGameManager.vcxproj  HobbitGameManager.vcxproj.filters  HobbitManager Old version Bad version.h  HobbitProcessAnalyzer.h  NPC.cpp  NPC.h  ProcessAnalyzer.h  ProcessAnalyzerTypeWrapped.h  Source.cpp
HobbitMultiplayerWindowed/: HobbitMultiplayerWindowed.cpp  HobbitMultiplayerWindowed.rc  HobbitMultiplayerWindowed.vcxproj  HobbitMultiplayerWindowed.vcxproj.filters  Resource.h
LogSystem/: Log.h  LogManager.cpp  LogManager.h  LogOption.h  LogSystem.vcxproj  LogSystem.vcxproj.filters  Utilities.h
NetworkUtilities/: Message.cpp  Message.h  NetworkUtilities.vcxproj  NetworkUtilities.vcxproj.filters  Source.cpp  WinCrypto.cpp
SecureChatAsio/: Client.cpp  Client.h  Message.cpp  Message.h  Server.cpp  Server.h  TestServerClient.cpp  WinCrypto.h
ServerClient/: Client.cpp  Client.h  IPv4.cpp  IPv4.h  Message.cpp  Message.h  Server.cpp  Server.h  ServerClient.vcxproj  ServerClient.vcxproj.filters  (+1 more)
(+9 files in other folders)
